--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-Flask==2.3.0
+Flask==3.0.0
 pytesseract==0.3.10
-Pillow==10.0.0
-hypothesis==6.82.0
-easyocr>=1.7.0
+hypothesis==6.92.0
+easyocr==1.7.1
+torch==2.1.0
+torchvision==0.16.0
+opencv-python-headless==4.8.1.78
+scikit-image==0.22.0
+scipy==1.11.4
+numpy==1.26.2
 gunicorn==21.2.0
+
